# AgentsArena

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  fly.toml  pyproject.toml
docs/: ADAPTER_BOUNDARIES.md  ADDING_A_GAME.md  DEPLOYMENT.md  MATCH_ARENA_HANDOFF.md  NETWORK_PROTOCOL.md  NEXT_SESSION_PROMPT.md  RFC_IMPERFECT_INFORMATION.md
examples/: run_and_render_match.py  run_ollama_vs_ollama.py  run_remote_demo.py
src/agents_arena.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/arena/: __init__.py
src/arena/adapters/: __init__.py  in_process.py
src/arena/agents/: __init__.py
src/arena/cli/: __main__.py  app.py  policies.py  remote.py  rendering.py
src/arena/core/: __init__.py  actions.py  config.py  events.py  exceptions.py  game_definition.py  observations.py  registry.py  results.py  rules_engine.py  seats.py  serializer.py  types.py
src/arena/games/: __init__.py
src/arena/match/: __init__.py  local_match.py  policy.py  transcript.py
src/arena/mcp/: __init__.py  __main__.py  _adapters.py  schemas.py  server.py  session_registry.py
src/arena/runtime/: __init__.py  (+6 more)
tests/: __init__.py  test_import_smoke.py
tests/contract/: __init__.py  test_connect4_contract.py  test_game_contract.py  test_nim_contract.py  test_tictactoe_contract.py
tests/integration/: _ws_client.py  conftest.py  test_match_happy_path.py  test_mcp_integration.py  test_mcp_stdio_e2e.py  test_nim_happy_path.py  test_ollama_over_ws.py  test_remote_demo.py  test_resilience.py  test_sdk_integration.py
tests/unit/: __init__.py
(+161 files in other folders)
