[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-arena"
version = "0.1.0"
description = "Pure simulation package for deterministic turn-based games."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "websockets>=12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
